; ModuleID = '/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_texture.c_palette_sample.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_texture.c_palette_sample.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_texture_object = type { i64*, i32 }

@.str = private unnamed_addr constant [37 x i8] c"Bad palette format in palette_sample\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gl_texture_object*, i64, i64*, i64*, i64*, i64*)* @palette_sample to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @palette_sample(%struct.gl_texture_object* %0, i64 %1, i64* %2, i64* %3, i64* %4, i64* %5) #0 {
  %7 = alloca %struct.gl_texture_object*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i64*, align 8
  %12 = alloca i64*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i64*, align 8
  store %struct.gl_texture_object* %0, %struct.gl_texture_object** %7, align 8
  store i64 %1, i64* %8, align 8
  store i64* %2, i64** %9, align 8
  store i64* %3, i64** %10, align 8
  store i64* %4, i64** %11, align 8
  store i64* %5, i64** %12, align 8
  %15 = load i64, i64* %8, align 8
  %16 = trunc i64 %15 to i32
  store i32 %16, i32* %13, align 4
  %17 = load %struct.gl_texture_object*, %struct.gl_texture_object** %7, align 8
  %18 = getelementptr inbounds %struct.gl_texture_object, %struct.gl_texture_object* %17, i32 0, i32 0
  %19 = load i64*, i64** %18, align 8
  store i64* %19, i64** %14, align 8
  %20 = load %struct.gl_texture_object*, %struct.gl_texture_object** %7, align 8
  %21 = getelementptr inbounds %struct.gl_texture_object, %struct.gl_texture_object* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  switch i32 %22, label %107 [
    i32 133, label %23
    i32 131, label %31
    i32 132, label %31
    i32 130, label %37
    i32 129, label %52
    i32 128, label %74
  ]

23:                                               ; preds = %6
  %24 = load %struct.gl_texture_object*, %struct.gl_texture_object** %7, align 8
  %25 = getelementptr inbounds %struct.gl_texture_object, %struct.gl_texture_object* %24, i32 0, i32 0
  %26 = load i64*, i64** %25, align 8
  %27 = load i64, i64* %8, align 8
  %28 = getelementptr inbounds i64, i64* %26, i64 %27
  %29 = load i64, i64* %28, align 8
  %30 = load i64*, i64** %12, align 8
  store i64 %29, i64* %30, align 8
  br label %109

31:                                               ; preds = %6, %6
  %32 = load i64*, i64** %14, align 8
  %33 = load i64, i64* %8, align 8
  %34 = getelementptr inbounds i64, i64* %32, i64 %33
  %35 = load i64, i64* %34, align 8
  %36 = load i64*, i64** %9, align 8
  store i64 %35, i64* %36, align 8
  br label %109

37:                                               ; preds = %6
  %38 = load i64*, i64** %14, align 8
  %39 = load i64, i64* %8, align 8
  %40 = shl i64 %39, 1
  %41 = add i64 %40, 0
  %42 = getelementptr inbounds i64, i64* %38, i64 %41
  %43 = load i64, i64* %42, align 8
  %44 = load i64*, i64** %9, align 8
  store i64 %43, i64* %44, align 8
  %45 = load i64*, i64** %14, align 8
  %46 = load i64, i64* %8, align 8
  %47 = shl i64 %46, 1
  %48 = add i64 %47, 1
  %49 = getelementptr inbounds i64, i64* %45, i64 %48
  %50 = load i64, i64* %49, align 8
  %51 = load i64*, i64** %12, align 8
  store i64 %50, i64* %51, align 8
  br label %109

52:                                               ; preds = %6
  %53 = load i64*, i64** %14, align 8
  %54 = load i64, i64* %8, align 8
  %55 = mul i64 %54, 3
  %56 = add i64 %55, 0
  %57 = getelementptr inbounds i64, i64* %53, i64 %56
  %58 = load i64, i64* %57, align 8
  %59 = load i64*, i64** %9, align 8
  store i64 %58, i64* %59, align 8
  %60 = load i64*, i64** %14, align 8
  %61 = load i64, i64* %8, align 8
  %62 = mul i64 %61, 3
  %63 = add i64 %62, 1
  %64 = getelementptr inbounds i64, i64* %60, i64 %63
  %65 = load i64, i64* %64, align 8
  %66 = load i64*, i64** %10, align 8
  store i64 %65, i64* %66, align 8
  %67 = load i64*, i64** %14, align 8
  %68 = load i64, i64* %8, align 8
  %69 = mul i64 %68, 3
  %70 = add i64 %69, 2
  %71 = getelementptr inbounds i64, i64* %67, i64 %70
  %72 = load i64, i64* %71, align 8
  %73 = load i64*, i64** %11, align 8
  store i64 %72, i64* %73, align 8
  br label %109

74:                                               ; preds = %6
  %75 = load i64*, i64** %14, align 8
  %76 = load i32, i32* %13, align 4
  %77 = shl i32 %76, 2
  %78 = add nsw i32 %77, 0
  %79 = sext i32 %78 to i64
  %80 = getelementptr inbounds i64, i64* %75, i64 %79
  %81 = load i64, i64* %80, align 8
  %82 = load i64*, i64** %9, align 8
  store i64 %81, i64* %82, align 8
  %83 = load i64*, i64** %14, align 8
  %84 = load i32, i32* %13, align 4
  %85 = shl i32 %84, 2
  %86 = add nsw i32 %85, 1
  %87 = sext i32 %86 to i64
  %88 = getelementptr inbounds i64, i64* %83, i64 %87
  %89 = load i64, i64* %88, align 8
  %90 = load i64*, i64** %10, align 8
  store i64 %89, i64* %90, align 8
  %91 = load i64*, i64** %14, align 8
  %92 = load i32, i32* %13, align 4
  %93 = shl i32 %92, 2
  %94 = add nsw i32 %93, 2
  %95 = sext i32 %94 to i64
  %96 = getelementptr inbounds i64, i64* %91, i64 %95
  %97 = load i64, i64* %96, align 8
  %98 = load i64*, i64** %11, align 8
  store i64 %97, i64* %98, align 8
  %99 = load i64*, i64** %14, align 8
  %100 = load i32, i32* %13, align 4
  %101 = shl i32 %100, 2
  %102 = add nsw i32 %101, 3
  %103 = sext i32 %102 to i64
  %104 = getelementptr inbounds i64, i64* %99, i64 %103
  %105 = load i64, i64* %104, align 8
  %106 = load i64*, i64** %12, align 8
  store i64 %105, i64* %106, align 8
  br label %109

107:                                              ; preds = %6
  %108 = call i32 @gl_problem(i32* null, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  br label %109

109:                                              ; preds = %23, %31, %37, %52, %74, %107
  ret void
}

declare dso_local i32 @gl_problem(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
